<resources>
    <string name="app_name">AssassinsList</string>
    <string name="member_name_label">Name</string>
    <string name="member_gender_label">Gender</string>
    <string name="member_birthday_label">Birthday</string>
    <string name="member_information_label">Personal Information</string>
    <string name="member_name_hint">Enter the member`s name</string>
    <string name="radio_button_male">Male</string>
    <string name="radio_button_female">Female</string>
    <string name="member_dead">dead</string>
    <string name="member_information_lines">5</string>
    <string name="member_information_hint">Enter the information of member</string>
    <string name="add_member">Add Member</string>
</resources>